Inefficient use of Number constructor.